--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -5,10 +5,10 @@
 
 	<header th:replace="layout/layout :: header"></header>
 
-	<div class="container">
-		<div class="row align-items-center justify-content-center vh-100">
-			<form th:action="@{/form}" th:object="${cliente}" method="post" enctype="multipart/form-data">
-				<div class="card" style="width: 36rem;">
+	<form th:action="@{/form}" th:object="${cliente}" method="post" enctype="multipart/form-data">
+		<div class="col-sm-6 col-md-5 col-xl-4  mx-auto mt-5">
+			
+				<div class="card">
 					<div class="card-header">
 						<h4 th:text="${titulo}" class="text-center"></h4>
 					</div>
@@ -23,8 +23,8 @@
 				FIN ALTERNATIVA DE ERRORES -->
 
 						<div class="form-group row">
-							<label class="col-sm-2 col-form-label" for="nombre">Nombre</label>
-							<div class="col-sm-10">
+							<label class="col-xs-12 col-lg-3 col-form-label" for="nombre">Nombre</label>
+							<div class="col-xs-12 col-lg-9">
 								<input type="text" class="form-control" th:field="*{nombre}"
 									id="nombre" th:errorclass="'form-control is-invalid'"
 									placeholder="Ingrese su nombre"> <small
@@ -33,8 +33,8 @@
 							</div>
 						</div>
 						<div class="form-group row">
-							<label class="col-sm-2 col-form-label" for="apellido">Apellido</label>
-							<div class="col-sm-10">
+							<label class="col-md-12 col-lg-3 col-form-label" for="apellido">Apellido</label>
+							<div class="col-md-12 col-lg-9">
 								<input type="text" class="form-control" th:field="*{apellido}"
 									id="apellido" th:errorclass="'form-control is-invalid'"
 									placeholder="Ingrese su apellido"> <small
@@ -44,8 +44,8 @@
 							</div>
 						</div>
 						<div class="form-group row">
-							<label class="col-sm-2 col-form-label" for="correo">Correo</label>
-							<div class="col-sm-10">
+							<label class="col-md-12 col-lg-3 col-form-label" for="correo">Correo</label>
+							<div class="col-md-12 col-lg-9">
 								<input type="text" class="form-control" th:field="*{email}"
 									id="correo" th:errorclass="'form-control is-invalid'"
 									placeholder="mail@example.com"> <small
@@ -54,8 +54,8 @@
 							</div>
 						</div>
 						<div class="form-group row">
-							<label class="col-sm-2 col-form-label" for="fecha">Fecha</label>
-							<div class="col-sm-10">
+							<label class="col-md-12 col-lg-3 col-form-label" for="fecha">Fecha</label>
+							<div class="col-md-12 col-lg-9">
 								<input type="date" class="form-control" th:field="*{createAt}"
 									id="fecha" th:errorclass="'form-control is-invalid'"> <small
 									class="form-text text-danger"
@@ -64,8 +64,8 @@
 							</div>
 						</div>
 						<div class="form-group row">
-							<label class="col-sm-2 col-form-label" for="file">Foto</label>
-							<div class="col-sm-10">
+							<label class="col-md-12 col-lg-3 col-form-label" for="file">Foto</label>
+							<div class="col-md-12 col-lg-9">
 								<input type="file" id="file" name="file" class="form-control">
 							</div>	
 						</div>
@@ -75,10 +75,8 @@
 							class="btn btn-block btn-success rounded-pill">Agregar</button>
 					</div>
 				</div>
-
-			</form>
-		</div>
-	</div>
+			</div>
+		</form>
 
 </body>
 <section th:replace="layout/layout :: scripts"></section>
