--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -2,11 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="layout/layout :: head"></head>
 <body>
-
 	<header th:replace="layout/layout :: header"></header>
 
-	<div class="container">
-		<div class="row align-items-center mt-5">
+		<div class="d-flex align-items-center justify-content-center min-vh-100">
 			<div class="col">
 				<div class="card">
 					<div class="card-header">
@@ -17,13 +15,15 @@
 							<a type="button" th:href="@{/form}"
 								class="btn btn-primary rounded-pill">Crear cliente</a>
 						</h5>
-						<table class="table">
+						<div class="table-responsive">
+							<table class="table table-hover">
 							<tr>
 								<th>Id</th>
 								<th>Nombre</th>
 								<th>Apellido</th>
 								<th>Correo</th>
 								<th>Fecha</th>
+								<th>Crear factura</th>
 								<th>Editar</th>
 								<th>Eliminar</th>
 							</tr>
@@ -33,6 +33,8 @@
 								<td th:text="${cliente.apellido}"></td>
 								<td th:text="${cliente.email}"></td>
 								<td th:text="${cliente.createAt}"></td>
+								<td><a type="button" th:href="@{/factura/form/} + ${cliente.id}"
+									class="btn btn-outline-success rounded-pill">Crear factura</a></td>
 								<td><a type="button" th:href="@{/form/} + ${cliente.id}"
 									class="btn btn-outline-warning rounded-pill">Editar</a></td>
 								<td><a type="button"
@@ -42,12 +44,13 @@
 								</td>
 							</tr>
 						</table>
+						</div>
 						<nav th:replace="paginator-nav :: paginator"></nav>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+	
 </body>
 <section th:replace="layout/layout :: scripts"></section>
 </html>
